[package]
name = "npcap-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
pktparse = "0.7.1"
http-bytes = { version = "0.1.0", optional = true }
crossbeam-channel = { version = "0.5.6", optional = true }

[dev-dependencies]
dns-parser = "0.8.0"

[features]
http-parse = ["dep:http-bytes"]
cbeam-chan = ["dep:crossbeam-channel"]

[build-dependencies]
bindgen = "0.60.1"
